<?xml version="1.0"?>
<package format="2">
  <name>sunray_formation</name>
  <version>0.0.0</version>
  <description>The uav_formation package</description>

  <maintainer email="qiyh8@mail.sysu.edu.cn">Yuhua Qi</maintainer>

  <license>TODO</license>

  <build_depend>message_generation</build_depend>
  <build_depend>yaml_cpp</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>yaml_cpp</exec_depend>
  
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>